--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -17,7 +17,7 @@
       <ion-icon name="md-cart"></ion-icon>
       <ion-label>Cart</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="register">
+    <ion-tab-button tab="profile">
       <ion-icon name="md-person"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
