--- a/src/app/auth/register/register.page.scss
+++ b/src/app/auth/register/register.page.scss
@@ -9,3 +9,12 @@
 .submit-btn {
   margin-top: 40px;
 }
+ion-backdrop {
+  opacity: 0.3;
+  z-index: 9999;
+}
+
+:root {
+  --ion-safe-area-top: 20px;
+  --ion-safe-area-bottom: 22px;
+}
