--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -1,9 +1,59 @@
-.error {
-    color: rgb(223, 62, 62);
-    font-size: 11px;
-  }
+.avatar img {
+  /* background-image: url('C:/Users/Anuitex-20/Desktop/Edinorog-7.jpg'); */
+  background-size: cover;
+  width: 135px;
+  height: 135px;
+  margin: 0 auto 25px auto;
+  border-radius: 75px;
+}
 
-  .error1 {
-    color: rgb(75, 75, 75);
-    border-bottom: 1px solid #ff0000;
-  }
+.information {
+  text-align: left;
+}
+
+.information-field {
+  margin-bottom: 10px;
+}
+
+.change-avatar {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 70px;
+}
+
+.button-group button {
+  margin-left: 5px;
+}
+
+.title-settings {
+  margin-bottom: 40px;
+}
+
+.form-container {
+  margin-top: 20px;
+}
+
+.delete-button {
+  position: absolute;
+  border-radius: 50px;
+  top: 5px;
+  right: 5px;
+}
+
+.editAble {
+  border: 2px solid silver;
+  border-radius: 10px;
+  padding: 2px 5px;
+}
+
+.editAble-active {
+  border: 2px solid #e47b7b;
+  border-radius: 10px;
+  padding: 2px 5px;
+}
+
+#delete{
+  --border-radius: 60px;
+}
