--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -2,12 +2,16 @@
   <div class="profile-container">
     <ion-button id="delete" class="delete-button" color="danger" >X</ion-button>
     <ion-title class="title-settings">Account settings: </ion-title>
-    <div class="avatar"><img [src]="currentUserImg" height="200" *ngIf="currentUserImg"></div>
+    <div class="avatar"><img [src]="{{ user.photoUrl }}" height="200" *ngIf="currentUserImg"></div>
     <div class="change-avatar">
       <span style="color:red;" *ngIf="message">{{ message }}</span>
       <input *ngIf="editMode" #file type="file" accept='image/*' (change)="preview(file.files)" />
     </div>
-    <ion-title>{{ currentUser }}</ion-title>
+    <ion-title>{{ user.name }}</ion-title>
+    <div>
+        <p>{{ user.email }}</p>
+    </div>
+
     <!-- <ion-subtitle>{{ currentUserRights }}</ion-subtitle> -->
 
     <div class="button-group">
