--- a/src/app/main-tab/main-tab.page.html
+++ b/src/app/main-tab/main-tab.page.html
@@ -5,7 +5,6 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
     <ion-card class="welcome-card">
       <ion-img src="../assets/img/books.jpg"></ion-img>
@@ -17,57 +16,34 @@
         <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
       </ion-card-content>
     </ion-card>
-    <!-- <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://beta.ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://beta.ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://beta.ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://beta.ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list> -->
-
-
     <div>
         <section class="section">
             <div class="container">
-              <div *ngFor="let book of goodsData">
+              <div *ngFor="let item of goodsData">
                 <ion-card class="card__goods">
                   <div class="card__goods-title">
                     <div class="title__img">
-                      <img src="{{ book.img }}" alt="book image">
+                      <img src="{{ item.img }}" alt="book image">
                     </div>
                     <div class="title_name">
-                      <h3>{{ book.title }}</h3>
-                      <h5>{{ book.author }}</h5>
+                      <h3>{{ item.title }}</h3>
+                      <h5>{{ item.name }}</h5>
       
                     </div>
                   </div>
                   <div>
                     <p>
-                      {{book.description}}
+                      {{item.description}}
                     </p>
                   </div>
                   <div class="card__goods-buttons">
                     <div class="card__goods-price">
                       <p>
-                        Price: {{book.price}}
+                        Price: {{item.price}}
                       </p>
                     </div>
-                    <button>Details</button>
-                    <button>Add to cart</button>
+                    <ion-button >Details</ion-button >
+                    <ion-button >Add to cart</ion-button >
                   </div>
                 </ion-card>
               </div>
