--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -17,11 +17,13 @@
       <ion-icon name="md-cart"></ion-icon>
       <ion-label>Cart</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="profile">
+    <ion-tab-button tab="profile" *ngIf="(isLoggedIn | async)">
       <ion-icon name="md-person"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
-
+    <ion-tab-button tab="login" *ngIf="!(isLoggedIn | async)">
+      <ion-icon name="md-image"></ion-icon>
+      <ion-label>Login</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
