--- a/src/app/main-tab/main-tab.page.html
+++ b/src/app/main-tab/main-tab.page.html
@@ -16,6 +16,7 @@
         <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
       </ion-card-content>
     </ion-card>
+    <ion-content>
     <div>
         <section class="section">
             <div class="container">
