--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,15 +5,11 @@
       <ion-icon name="md-home"></ion-icon>
       <ion-label>Main Page</ion-label>
     </ion-tab-button>
-    <!-- <ion-tab-button tab="tab2">
-      <ion-icon name="md-construct"></ion-icon>
-      <ion-label>Admin panel</ion-label>
-    </ion-tab-button>  -->
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="chat">
       <ion-icon name="md-contacts"></ion-icon>
       <ion-label>Chat</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="chat">
       <ion-icon name="md-cart"></ion-icon>
       <ion-label>Cart</ion-label>
     </ion-tab-button>
